登录和设备初始化完成后台迁移
1.登录验证完成后台迁移
2.设备初始化完成后台迁移，设备数据只需维护后台support_devices表
3.原料迁移进行了一半，可能有问题
4.配比，制件方法信息迁移了一半